--- a/FIPLY/App/app/src/main/res/layout/activity_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
-        android:textSize="25dp" />
+        android:textSize="15dp" />
 
     <Button
         android:id="@+id/btStartTr"
@@ -33,5 +33,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
-        android:textSize="25dp" />
+        android:textSize="15dp" />
+
+    <Button
+        android:id="@+id/btStartEU"
+        android:text="@string/startEU"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:textSize="15dp" />
 </LinearLayout>
