--- a/FIPLY/App/app/src/main/res/layout/activity_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_main.xml
@@ -43,4 +43,13 @@
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:textSize="15dp" />
+
+    <Button
+        android:id="@+id/btStartMenu"
+        android:text="@string/startMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:textSize="35dp" />
 </LinearLayout>
