--- a/FIPLY/App/app/src/main/res/layout/activity_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,7 @@
     <TextView
         android:text="@string/welcome"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp" />
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/btStartUe"
@@ -23,8 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:gravity="center"
-        android:textSize="15dp" />
+        android:gravity="center" />
 
     <Button
         android:id="@+id/btStartTr"
@@ -32,8 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:gravity="center"
-        android:textSize="15dp" />
+        android:gravity="center" />
 
     <Button
         android:id="@+id/btStartEU"
@@ -41,8 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:gravity="center"
-        android:textSize="15dp" />
+        android:gravity="center" />
 
     <Button
         android:id="@+id/btStartMenu"
