--- a/FIPLY/App/app/src/main/res/layout/activity_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_main.xml
@@ -2,50 +2,50 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    android:paddingBottom="16dp"
     tools:context=".MainActivity">
 
     <TextView
-        android:text="@string/welcome"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/welcome" />
 
     <Button
         android:id="@+id/btStartUe"
-        android:text="@string/startUe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:gravity="center" />
-
-    <Button
-        android:id="@+id/btStartTr"
-        android:text="@string/startTr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:gravity="center" />
-
-    <Button
-        android:id="@+id/btStartEU"
-        android:text="@string/startEU"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:gravity="center" />
-
-    <Button
-        android:id="@+id/btStartMenu"
-        android:text="@string/startMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
+        android:text="@string/startUe" />
+
+    <Button
+        android:id="@+id/btStartTr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="@string/startTr" />
+
+    <Button
+        android:id="@+id/btStartEU"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="@string/startEU" />
+
+    <Button
+        android:id="@+id/btStartMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="@string/startMenu"
         android:textSize="35dp" />
 </LinearLayout>
