--- a/FIPLY/App/app/src/main/res/layout/activity_uebungskatalog.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_uebungskatalog.xml
@@ -9,9 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="htl_leonding.fiplyteam.fiply.UebungskatalogActivity">
 
-
     <GridView
-        android:id="@+id/uebungsGrid"
+        android:id="@+id/list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
