--- a/FIPLY/App/app/src/main/res/layout/activity_uebungskatalog.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_uebungskatalog.xml
@@ -9,10 +9,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="htl_leonding.fiplyteam.fiply.UebungskatalogActivity">
 
-    <GridView
-        android:id="@+id/list"
+    <ListView
+        android:id="@android:id/list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" />
+
 </RelativeLayout>
