--- a/FIPLY/App/app/src/main/res/layout/activity_splash.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_splash.xml
@@ -9,11 +9,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="htl_leonding.fiplyteam.fiply.SplashActivity">
 
-    <!--<ImageView
-        android:id="@+id/image"
-        android:src="src"
+    <ImageView
+        android:id="@+id/imageViewSplash"
+        android:src="@drawable/splash1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
-        -->
+
 </FrameLayout>
