--- a/FIPLY/App/app/src/main/res/layout/activity_uebungskatalog.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_uebungskatalog.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="htl_leonding.fiplyteam.fiply.UebungskatalogActivity">
 
-    <ListView
+    <ExpandableListView
         android:id="@android:id/list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
