--- a/FIPLY/App/app/src/main/res/layout/activity_training_session.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_training_session.xml
@@ -9,10 +9,29 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="htl_leonding.fiplyteam.fiply.TrainingSessionActivity">
 
-    <TextView
-        android:text="@string/titleTS"
+    <EditText
+        android:id="@+id/tvCountDown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15dp" />
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:textSize="200sp"
+        android:inputType="number" />
 
+    <Button
+        android:id="@+id/tsbtStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvCountDown"
+        android:textSize="30sp"
+        android:text="@string/tsbtStart" />
+
+    <Button
+        android:id="@+id/tsbtReset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvCountDown"
+        android:layout_toRightOf="@+id/tsbtStart"
+        android:textSize="30sp"
+        android:text="@string/tsbtReset" />
 </RelativeLayout>
