--- a/FIPLY/App/app/src/main/res/layout/activity_uebungskatalog.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_uebungskatalog.xml
@@ -11,9 +11,9 @@
 
     <ExpandableListView
         android:id="@android:id/list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_width="match_parent"
+        android:layout_height="352dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
