--- a/FIPLY/App/app/src/main/res/layout/parent_listview.xml
+++ b/FIPLY/App/app/src/main/res/layout/parent_listview.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="#376cf1"
+    android:orientation="vertical"
+    android:padding="8dp">
+
 
     <TextView
         android:id="@+id/expListViewParent"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:textColor="#FFFFFF"
+        android:textSize="17dp" />
 
 </LinearLayout>
