--- a/FIPLY/App/app/src/main/res/layout/child_listview.xml
+++ b/FIPLY/App/app/src/main/res/layout/child_listview.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="55dip"
-    android:background="#eaeaef"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical">
 
     <TextView
@@ -12,7 +12,7 @@
         android:paddingBottom="5dp"
         android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
         android:paddingTop="5dp"
-        android:textColor="#376cf1"
+        android:textColor="@color/colorPrimary"
         android:textSize="17dip" />
 
 </LinearLayout>
