--- a/FIPLY/App/app/src/main/res/layout/parent_listview.xml
+++ b/FIPLY/App/app/src/main/res/layout/parent_listview.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="#376cf1"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -12,7 +12,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorText"
         android:textSize="17dp" />
 
 </LinearLayout>
