--- a/FIPLY/App/app/src/main/res/values/colors.xml
+++ b/FIPLY/App/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#E0F2F1</color>
     <color name="background_material_light">#fafafa</color>
     <color name="black">#000000</color>
+    <color name="colorText">#FFFFFF</color>
 </resources>
