--- a/FIPLY/App/app/src/main/res/layout/activity_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_main.xml
@@ -55,8 +55,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
-        android:divider="#E0F2F1"
+        android:divider="@color/colorAccent"
         android:dividerHeight="1dp"
-        android:background="#009688" />
+        android:background="@color/colorPrimary" />
 
 </android.support.v4.widget.DrawerLayout>
