--- a/FIPLY/App/app/src/main/res/layout/activity_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_main.xml
@@ -26,37 +26,41 @@
         android:id="@+id/btStartUe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
-        android:textSize="25dp"
+        android:background="@color/colorPrimary"
         android:text="@string/startUe"
-        android:layout_gravity="center_horizontal" />
+        android:textSize="25dp" />
 
     <Button
         android:id="@+id/btStartTr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
-        android:textSize="25dp"
+        android:background="@color/colorPrimary"
         android:text="@string/startTr"
-        android:layout_gravity="center_horizontal" />
+        android:textSize="25dp" />
 
     <Button
         android:id="@+id/btStartEU"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
-        android:textSize="25dp"
+        android:background="@color/colorPrimary"
         android:text="@string/startEU"
-        android:layout_gravity="center_horizontal" />
+        android:textSize="25dp" />
 </LinearLayout>
 
     <ListView android:id="@+id/navlist"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/colorPrimary"
         android:choiceMode="singleChoice"
         android:divider="@color/colorAccent"
-        android:dividerHeight="1dp"
-        android:background="@color/colorPrimary" />
+        android:dividerHeight="1dp" />
+
 
 </android.support.v4.widget.DrawerLayout>
