--- a/FIPLY/App/app/src/main/res/layout/activity_erstelle_user_.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_erstelle_user_.xml
@@ -7,6 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/FragmentErstelleUser"
     tools:context="htl_leonding.fiplyteam.fiply.ErstelleUser_Activity">
 
     <TextView
