--- a/FIPLY/App/app/src/main/res/layout/activity_erstelle_user_.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_erstelle_user_.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:id="@+id/FragmentErstelleUser"
-    tools:context="htl_leonding.fiplyteam.fiply.ErstelleUser_Activity">
+    tools:context="htl_leonding.fiplyteam.fiply.fragments.FUsererstellung">
 
     <TextView
         android:text="@string/titleEU"
