--- a/FIPLY/App/app/src/main/res/layout/activity_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    tools:context=".MainActivity">
+    tools:context="htl_leonding.fiplyteam.fiply.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/welcome" />
-
-    <Button
-        android:id="@+id/btStartUe"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/startUe"
-        android:textSize="25dp" />
-
-    <Button
-        android:id="@+id/btStartTr"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/startTr"
-        android:textSize="25dp" />
-
-    <Button
-        android:id="@+id/btStartEU"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/startEU"
-        android:textSize="25dp" />
-</LinearLayout>
-
-    <ListView android:id="@+id/navlist"
+    <android.support.design.widget.NavigationView android:id="@+id/navlist"
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
@@ -61,6 +14,5 @@
         android:choiceMode="singleChoice"
         android:divider="@color/colorAccent"
         android:dividerHeight="1dp" />
-
 
 </android.support.v4.widget.DrawerLayout>
