--- a/FIPLY/App/app/src/main/res/layout/activity_training_session.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_training_session.xml
@@ -6,8 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="htl_leonding.fiplyteam.fiply.TrainingSessionActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
 
     <EditText
