--- a/FIPLY/App/app/src/main/res/layout/activity_splash.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_splash.xml
@@ -3,17 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="htl_leonding.fiplyteam.fiply.SplashActivity">
 
+    <!-- Stellt das Fiply-Logo mittels einer ImageView dar -->
     <ImageView
         android:id="@+id/imageViewSplash"
-        android:src="@drawable/splash1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:src="@drawable/splash1"
         />
 
 </FrameLayout>
