--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungskatalog.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungskatalog.xml
@@ -7,8 +7,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <ExpandableListView
-        android:id="@android:id/list"
+    <ListView
+        android:id="@+id/ueList"
         android:layout_width="match_parent"
         android:layout_height="352dp"
         android:layout_alignParentBottom="true"
