--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungdetail.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungdetail.xml
@@ -1,100 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1"
-    android:background="@color/colorAccent">
+    android:orientation="vertical"
+    android:scrollbarAlwaysDrawVerticalTrack="true"
+    android:weightSum="1">
 
     <TextView
         android:id="@+id/detailUebungName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:textColor="@color/colorTextDark"
-        android:textSize="30dp"
-        android:layout_gravity="center_horizontal"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/colorTextDark"
+        android:textSize="30dp" />
 
     <WebView
+        android:id="@+id/detailUebungVideo"
         android:layout_width="350dp"
         android:layout_height="350dp"
-        android:id="@+id/detailUebungVideo"
-        android:layout_weight="0.47"
         android:layout_below="@+id/staticDetailAnleitung"
         android:layout_centerHorizontal="true"
-        android:layout_margin="20dp" />
+        android:layout_margin="20dp"
+        android:layout_weight="0.47" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/detailMG"
         android:id="@+id/staticDetailMuskelGruppe"
-        android:layout_below="@+id/detailUebungName"
-        android:layout_toStartOf="@+id/detailUebungName"
-        android:textColor="@color/colorTextDark"/>
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:layout_alignStart="@+id/detailUebungVideo"
+        android:layout_below="@+id/detailUebungName"
+        android:text="@string/detailMG"
+        android:textColor="@color/colorTextDark" />
+
+    <TextView
         android:id="@+id/detailMuskelGruppe"
-        android:textColor="@color/colorTextDark"
-        android:layout_below="@+id/detailUebungName"
-        android:layout_alignEnd="@+id/detailUebungName" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/detailDesc"
+        android:layout_above="@+id/detailDesc"
+        android:layout_toEndOf="@id/staticDetailMuskelGruppe"
+        android:gravity="right"
+        android:text="New Text"
+        android:textAlignment="gravity"
+        android:textColor="@color/colorTextDark" />
+
+    <TextView
         android:id="@+id/staticDetailBeschreibung"
-        android:layout_below="@+id/staticDetailMuskelGruppe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignStart="@+id/staticDetailZielGruppe"
+        android:layout_below="@+id/staticDetailMuskelGruppe"
+        android:text="@string/detailDesc"
         android:textColor="@color/colorTextDark"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/detailZG"
         android:id="@+id/staticDetailZielGruppe"
-        android:layout_below="@+id/staticDetailBeschreibung"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignStart="@+id/staticDetailAnleitung"
+        android:layout_below="@+id/staticDetailBeschreibung"
+        android:text="@string/detailZG"
         android:textColor="@color/colorTextDark"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/detailAnl"
         android:id="@+id/staticDetailAnleitung"
-        android:layout_below="@+id/staticDetailZielGruppe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignStart="@+id/staticDetailMuskelGruppe"
+        android:layout_below="@+id/staticDetailZielGruppe"
+        android:text="@string/detailAnl"
         android:textColor="@color/colorTextDark"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
         android:id="@+id/detailDesc"
-        android:layout_alignTop="@+id/staticDetailBeschreibung"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignStart="@+id/detailMuskelGruppe"
-        android:textColor="@color/colorTextDark"/>
+        android:layout_alignTop="@+id/staticDetailBeschreibung"
+        android:gravity="right"
+        android:text="New Text"
+        android:textAlignment="gravity"
+        android:textColor="@color/colorTextDark" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
         android:id="@+id/detailZielGruppe"
-        android:textColor="@color/colorTextDark"
-        android:layout_below="@+id/detailDesc"
-        android:layout_alignStart="@+id/detailDesc" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/detailDesc"
+        android:layout_below="@+id/detailDesc"
+        android:gravity="right"
         android:text="New Text"
+        android:textAlignment="gravity"
+        android:textColor="@color/colorTextDark" />
+
+    <TextView
         android:id="@+id/detailAnl"
-        android:layout_alignTop="@+id/staticDetailAnleitung"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignStart="@+id/detailZielGruppe"
-        android:textColor="@color/colorTextDark"/>
+        android:layout_alignTop="@+id/staticDetailAnleitung"
+        android:gravity="right"
+        android:text="New Text"
+        android:textAlignment="gravity"
+        android:textColor="@color/colorTextDark" />
 
 </RelativeLayout>
