--- a/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <!-- FrameLayout in das die Fragments geladen werden -->
     <FrameLayout
-        android:id="@+id/fraTsUebungsview"
+        android:id="@+id/fraTsMusic"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
     <FrameLayout
         android:id="@+id/fraTsWatch"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2"/>
-    <!--<FrameLayout-->
-        <!--android:id="@+id/fraTsMusic"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_weight="1"/>-->
+        android:layout_height="wrap_content"
+        android:layout_above="@id/fraTsMusic"/>
+    <FrameLayout
+        android:id="@+id/fraTsUebungsview"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_above="@id/fraTsWatch"/>
+
+
 
     <!--<EditText-->
         <!--android:id="@+id/tvTimer"-->
@@ -83,4 +83,4 @@
         <!--android:text="@string/tsStopwatchBtReset"-->
         <!--android:textSize="20sp" />-->
     <!--&ndash;&gt;-->
-</LinearLayout>
+</RelativeLayout>
