--- a/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/fraTsMusic"/>
     <FrameLayout
-        android:id="@+id/fraTsUebungsview"
+        android:id="@+id/fraTsUebung"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_above="@id/fraTsWatch"/>
