Ueber die SeekBar kann der Progress veraendert werden

--- a/FIPLY/App/app/src/main/res/layout/fragment_music.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_music.xml
@@ -8,29 +8,47 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        android:id="@+id/tvSongname"
+        android:id="@+id/tvMuSongname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Songname - HERE"/>
 
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tvMuCurrentDur"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvSongname" />
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/tvMuSongname"
+        android:text="0:00" />
+
+    <TextView
+        android:id="@+id/tvMuTotalDur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/tvMuSongname"
+        android:text="0:00" />
+
+    <SeekBar
+        android:id="@+id/seekBarMu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvMuSongname"
+        android:layout_toLeftOf="@id/tvMuTotalDur"
+        android:layout_toRightOf="@id/tvMuCurrentDur" />
 
     <Button
         android:id="@+id/btnMuPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/seekBar"
+        android:layout_below="@id/seekBarMu"
         android:text="Play" />
 
     <Button
         android:id="@+id/btnMuStop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/seekBar"
+        android:layout_below="@id/seekBarMu"
         android:layout_toRightOf="@id/btnMuPlay"
         android:text="Stop" />
 
@@ -38,7 +56,7 @@
         android:id="@+id/btnMuBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/seekBar"
+        android:layout_below="@id/seekBarMu"
         android:layout_toRightOf="@id/btnMuStop"
         android:text="B" />
 
@@ -46,7 +64,7 @@
         android:id="@+id/btnMuForward"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/seekBar"
+        android:layout_below="@id/seekBarMu"
         android:layout_toRightOf="@id/btnMuBack"
         android:text="F" />
 
@@ -55,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/seekBar"
+        android:layout_below="@id/seekBarMu"
         android:text="List" />
 
 </RelativeLayout>
