--- a/FIPLY/App/app/src/main/res/layout/fragment_usererstellung.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_usererstellung.xml
@@ -10,10 +10,30 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="htl_leonding.fiplyteam.fiply.fragments.FUsererstellung">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/titleEU"
-        android:textSize="15dp" />
+    <Button
+        android:id="@+id/btChoose"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="Choose Profile" />
+
+    <Button
+        android:id="@+id/btCreate"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/btChoose"
+        android:layout_marginTop="56dp"
+        android:text="Create Profile" />
+
+    <Button
+        android:id="@+id/btEdit"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_alignStart="@+id/btChoose"
+        android:layout_below="@+id/btChoose"
+        android:layout_marginTop="42dp"
+        android:text="Edit Profile" />
 
 </RelativeLayout>
