--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
@@ -27,20 +27,33 @@
         android:id="@+id/etName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/userCreateWelcome"
+        android:layout_below="@+id/textView3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/etName"
-        android:layout_below="@+id/etName"
-        android:layout_marginTop="66dp"
+        android:layout_below="@+id/textView4"
         android:ems="10"
         android:inputType="textEmailAddress" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/userCreateWelcome"
+        android:layout_centerHorizontal="true"
+        android:text="Name:" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/textView3"
+        android:layout_below="@+id/etName"
+        android:text="E-Mail:" />
 </RelativeLayout>
